{
    "name": "MetaControls",
    "maps": [
        {
            "name": "GameHandler",
            "id": "dfa61183-31ca-4dcf-aa94-e67f94d56111",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "b196623a-e3b2-4ae6-bd27-c53db221a98f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrowShrink",
                    "type": "Button",
                    "id": "f05966c7-c4cb-4ed8-b75c-e2c416c7b3ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "0df51b2c-a9c1-454f-ab5a-06f026e67ed9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a557d6c9-0837-4ccf-9fee-43aeb5c52415",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce81751d-eb64-4e00-81c4-c2435c087f0f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c50ef9f2-7744-4085-b7f1-e054c1ea74c8",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowShrink",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a8e2c70-4d0e-46db-ae22-74a60fd27ded",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "145f93a0-524c-45d2-a268-9ed68902342d",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}